@@ -173,6 +173,89 @@
 					<warName>ROOT</warName>
 				</configuration>
 			</plugin>
+			<!--plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.1</version>
+				<executions>
+					<execution>
+						<id>tomcat-run</id>
+						<goals>
+							<goal>exec-war-only</goal>
+						</goals>
+						<phase>package</phase>
+						<configuration>
+							<path>/</path>
+							<enableNaming>true</enableNaming>
+							<finalName>easybuggy.jar</finalName>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin-->
+			<!--plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.2</version>
+				<executions>
+					<execution>
+						<id>startup-uber-start</id>
+						<phase>install</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<classpathScope>test</classpathScope>
+							<executable>java</executable>
+							<arguments>
+								<argument>${jvm.args.perm.size}</argument>
+								<argument>${jvm.args.gc.log.path}</argument>
+								<argument>-Xmx256m</argument>
+								<argument>-XX:MaxDirectMemorySize=90m</argument>
+								<argument>-XX:+UseSerialGC</argument>
+								<argument>-XX:+PrintHeapAtGC</argument>
+								<argument>-XX:+PrintGCDetails</argument>
+								<argument>-XX:+PrintGCDateStamps</argument>
+								<argument>-XX:+UseGCLogFileRotation</argument>
+								<argument>-XX:NumberOfGCLogFiles=5</argument>
+								<argument>-XX:GCLogFileSize=10M</argument>
+								<argument>-XX:GCTimeLimit=15</argument>
+								<argument>-XX:GCHeapFreeLimit=50</argument>
+								<argument>-XX:+HeapDumpOnOutOfMemoryError</argument>
+								<argument>-XX:HeapDumpPath=logs/</argument>
+								<argument>-XX:ErrorFile=logs/hs_err_pid%p.log</argument>
+								<!-- <argument>-XX:NativeMemoryTracking=summary</argument> -->
+								<!-- Auto kill JVM when OOME occurs: For post-8u92 JDKs -->
+								<!-- <argument>-XX:+CrashOnOutOfMemoryError</argument> -->
+								<!-- Auto kill JVM when OOME occurs: For Linux -->
+								<!-- <argument>-XX:OnOutOfMemoryError="kill -9 %p"</argument> -->
+								<!-- Auto kill JVM when OOME occurs: For Windows -->
+								<!-- -XX:OnOutOfMemoryError=taskkill /F /PID %p -->
+								<!-- UnlockCommercialFeatures/FlightRecorder: For Oracle Java commercial use -->
+								<!-- <argument>-XX:+UnlockCommercialFeatures</argument> <argument>-XX:+FlightRecorder</argument> -->
+								<!-- <argument>-agentpath:/root/eclipse/plugins/org.zeroturnaround.eclipse.embedder_7.0.8.RELEASE/jrebel/lib/libjrebel64.so</argument> -->
+								<argument>-agentlib:jdwp=transport=dt_socket,server=y,address=9009,suspend=n</argument>
+								<argument>-Dderby.stream.error.file=logs/derby.log</argument>
+								<argument>-Dderby.infolog.append=true</argument>
+								<argument>-Dderby.language.logStatementText=true</argument>
+								<argument>-Dderby.locks.deadlockTrace=true</argument>
+								<argument>-Dderby.locks.monitor=true</argument>
+								<argument>-Dderby.storage.rowLocking=true</argument>
+								<argument>-Dcom.sun.management.jmxremote</argument>
+								<argument>-Dcom.sun.management.jmxremote.port=7900</argument>
+								<argument>-Dcom.sun.management.jmxremote.ssl=false</argument>
+								<argument>-Dcom.sun.management.jmxremote.authenticate=false</argument>
+								<!-- <argument>-Djava.security.manager</argument>
+								<argument>-Djava.security.policy=catalina.policy</argument> -->
+								<!-- <argument>-Deasybuggy.mode=only-vulnerabilities</argument> -->
+								<argument>-ea</argument>
+								<argument>-jar</argument>
+								<argument>target/easybuggy.jar</argument>
+								<argument>-httpPort=${easybuggy-port}</argument>
+							</arguments>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin-->
 		</plugins>
 		<pluginManagement>
 			<plugins>
